# openclaw-manager

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL_FIXES.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  deploy.sh  package-lock.json  package.json  playwright.config.ts
.claude/: settings.local.json
.github/workflows/: build-release.yml  build-with-local-openclaw.yml  sidecar-e2e-tests.yml
.husky/_/: husky.sh
docs/: API.md  BUILD_RELEASE_STRATEGY.md  CHANGELOG.md  COMPLETE_BUILD_STRATEGY.md  E2E_TESTING_IMPROVEMENTS.md  FAQ.md  FINAL_REPORT.md  ISSUES.md  LINUX-DEPENDENCIES.md  LOCAL_BUILD_STRATEGY.md  MVP-ROADMAP.md  OPENCLAW_BUILD_GUIDE.md  RELEASE_CHECKLIST.md  SIDECAR_UI_TESTING.md  TESTING.md  TROUBLESHOOTING.md  USER_GUIDE.md  project-assessment-2026-03-08.md  technical-spec-v2-tauri.md
docs/plan/: 0306-plan.md
e2e/: SIDECAR_TESTING.md  agent-manager.spec.ts  dashboard.spec.ts  diagnostics.spec.ts  installation.spec.ts  log-viewer.spec.ts  model-config.spec.ts  service-control.spec.ts  settings.spec.ts  sidecar-installation.spec.ts  sidecar-unit-test.spec.ts  skill-store.spec.ts  update-manager.spec.ts
openclaw-manager/: CLAUDE.md  INSTALLER_OPTIMIZATION.md  README.md  TESTING.md  TEST_REPORT.md  index.html  package-lock.json  package.json  playwright.config.ts  test_install.sh  test_offline_install  vite.config.ts
openclaw-manager/src-tauri/: Cargo.toml  Cargo.toml.backup  tauri.conf.json  tauri.conf.json.backup
openclaw-manager/src-tauri/bundled/runtimes/: README.md
openclaw-manager/src-tauri/capabilities/: default.json
openclaw-manager/src-tauri/scripts/macos/: install_macos_11_0.sh  install_macos_13_0.sh
openclaw-manager/src-tauri/src/: lib.rs  main.rs  main.rs.backup
openclaw-manager/src-tauri/src/commands/: config.rs  file.rs  group.rs  log.rs  mod.rs  openclaw.rs  plugin.rs  secure.rs  service.rs  skill.rs
openclaw-manager/src-tauri/src/db/: migrations.rs  mod.rs
openclaw-manager/src-tauri/src/errors/: app_error.rs  mod.rs
openclaw-manager/src-tauri/src/installer/: mod.rs  runtime_bundle.rs  runtime_bundle_test.rs
openclaw-manager/src-tauri/src/models/: config.rs  file.rs  group.rs  mod.rs  openclaw.rs  plugin.rs  skill.rs
openclaw-manager/src-tauri/src/plugins/: loader.rs  mod.rs  runtime.rs  sandbox.rs
openclaw-manager/src-tauri/src/services/: config_manager.rs  installer.rs  log_service.rs  mod.rs  offline_installer.rs  offline_installer_test.rs  plugin_manager_test.rs  plugin_market.rs  process_manager.rs  secure_storage.rs  secure_storage_test.rs  skill_manager.rs  skill_manager_test.rs  skill_market.rs
openclaw-manager/src-tauri/src/system/: mod.rs
openclaw-manager/src-tauri/src/updater/: migration_test.rs  mod.rs
openclaw-manager/src-tauri/src/utils/: file_parser.rs  mod.rs  retry.rs
scripts/: build-offline-package.js  build-offline-package.ps1  build-offline-package.sh  build-openclaw-binary.sh  build-openclaw-local.sh  build-openclaw.sh  build-release.sh  build-with-openclaw.sh  cleanup-build.sh  download-openclaw.sh  download-runtimes.sh  test-api.js  test-offline-install.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/OpenClaw-Manager.app/Contents/: Info.plist
src-tauri/bundled/openclaw/: INSTALL.md  start.bat  start.sh
src-tauri/bundled/openclaw/skills/self-improving-agent/.clawdhub/: origin.json
src-tauri/bundled/presets/: models.yaml
src-tauri/scripts/: build-openclaw.sh  install_test.sh
src-tauri/scripts/macos/: install_macos_10_15.sh  install_macos_12_0.sh  install_macos_14_0.sh  install_macos_15_0.sh  install_macos_generic.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  model.rs  openclaw.rs  secure.rs  system.rs
src-tauri/src/errors/: app_error.rs  mod.rs
src-tauri/src/installer/: mod.rs  runtime_bundle.rs  sidecar_installer.rs
src-tauri/src/models/: openclaw.rs
src-tauri/src/services/: config_manager.rs  diagnostics.rs  installer.rs  log_watcher.rs  mod.rs  offline_installer.rs  plugin_manager.rs  process_manager.rs  secure_storage.rs  sidecar_launcher.rs
src-tauri/src/updater/: mod.rs  version.rs
src-tauri/src/utils/: mod.rs  platform.rs
src-tauri/tests/: config_integration_test.rs  config_manager_test.rs  diagnostics_integration_test.rs  diagnostics_test.rs  install_integration_test.rs  install_test.rs  log_service_test.rs  log_watcher_test.rs  mod_test.rs  offline_installer_test.rs  process_manager_test.rs  secure_storage_test.rs  security_integration_test.rs  service_integration_test.rs  test_offline_install.rs  updater_test.rs
(+105 files in other folders)
