[package]
name = "openclaw-manager"
version = "0.1.0"
description = "A Tauri App for managing claw machine files"
authors = ["OpenClaw Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# OpenClaw installer dependencies
reqwest = { version = "0.11", features = ["stream", "native-tls-vendored", "json"] }
urlencoding = "2.1"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tokio = { version = "1.36", features = ["full"] }
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dirs = "5.0"
keyring = "2"
sysinfo = "0.30"
tempfile = "3"
async-trait = "0.1"
lazy_static = "1.4"
aes-gcm = "0.10"
rand = "0.8"
whoami = "1.4"
hostname = "0.3"
notify = "6.0"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
]}

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
