[package]
name = "openclaw-manager"
version = "0.1.0"
description = "A Tauri App for managing claw machine files"
authors = ["OpenClaw Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = ["shell-open", "system-tray", "dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "os-all", "path-all"] }
# tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled", "chrono", "serde_json", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }
walkdir = "2.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
